# autotooling

./: README.md  configure.ac
lib/: Makefile.am  mysqrt.cpp
src/: Makefile.am  source.cpp
